bundox-client/styles/styles.css
html, body {
  height: 100%
}

body {
  margin: 0;
}

.splash {
  text-align: center;
  margin: 10% 0 0 0;
  box-sizing: border-box;
}

.splash .message {
  font-size: 72px;
  line-height: 72px;
  text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
  text-transform: uppercase;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.splash .fa-spinner {
  text-align: center;
  display: inline-block;
  font-size: 72px;
  margin-top: -20px;
  color: #555;
}

.navbar-brand img {
  width: 90px;
  margin-top: -5px;
}

.page-host {
  position: absolute;
  left: 0;
  right: 0;
  top: 50px;
  bottom: 0;
  overflow-x: hidden;
  overflow-y: hidden;
}

@media print {
  .page-host {
    position: absolute;
    left: 10px;
    right: 0;
    top: 50px;
    bottom: 0;
    overflow-y: inherit;
    overflow-x: inherit;
  }
}

section {
  margin: 0 20px;
}

.navbar-nav li.loader {
  margin: 12px 24px 0 6px;
}

.pictureDetail {
  max-width: 425px;
}

/* animate page transitions */
section.au-enter-active {
  -webkit-animation: fadeInRight 1s;
  animation: fadeInRight 1s;
}

div.au-stagger {
  /* 50ms will be applied between each successive enter operation */
  -webkit-animation-delay: 50ms;
  animation-delay: 50ms;
}

.card-container.au-enter {
  opacity: 0 !important;
}

.card-container.au-enter-active {
  -webkit-animation: fadeIn 2s;
  animation: fadeIn 2s;
}

.card {
  overflow: hidden;
  position: relative;
  border: 1px solid #CCC;
  border-radius: 8px;
  text-align: center;
  padding: 0;
  background-color: #337ab7;
  color: rgb(136, 172, 217);
  margin-bottom: 32px;
  box-shadow: 0 0 5px rgba(0, 0, 0, .5);
}

.card .content {
  margin-top: 10px;
}

.card .content .name {
  color: white;
  text-shadow: 0 0 6px rgba(0, 0, 0, .5);
  font-size: 18px;
}

.card .header-bg {
  /* This stretches the canvas across the entire hero unit */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 70px;
  border-bottom: 1px #FFF solid;
  border-radius: 6px 6px 0 0;
}

.card .avatar {
  position: relative;
  margin-top: 15px;
  z-index: 100;
}

.card .avatar img {
  width: 100px;
  height: 100px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  border: 2px #FFF solid;
}

/* animation definitions */
@-webkit-keyframes fadeInRight {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0)
  }
  100% {
    opacity: 1;
    -webkit-transform: none;
    transform: none
  }
}

@keyframes fadeInRight {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(100%, 0, 0);
    -ms-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0)
  }
  100% {
    opacity: 1;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.document:hover {
  background: #7698D6;
  cursor: pointer;
}

.documentation-result:hover {
  background: #7698D6;
  cursor: pointer;
}

img.family {
  width: 20px;
  height: 20px;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-color: #AAA;
  border-radius: 2px;
  margin: 2px 5px;
}

.selected-result {
  background: #B9C4D9;
}

.selected-result:hover {
  background: #7698D6;
}

.fill {
  min-height: 100%;
  height: 100%;
}

.search {
  height: 100%;
  overflow: scroll;
}

.search input {
  width: 100%;
  height: 35px;
  font-size: 20px;
  margin-bottom: 5px;
}
.searchResults {
  list-style: none;
  padding-left: 0;
}

.documentation-pane {
  height: 100%;
  padding-bottom: 30px;
  margin: 0 auto -30px;
}

.documentation-pane-footer {
  height: 30px;
  border-style: solid;
  border-color: #e7e7e7;
  border-width: 1px;
  padding: 2px;
  text-align: center;
  background-color: #f8f8f8;
  color: #aaa;
  font-weight: 200;
}

.documentation-pane-footer a {
  color: #aaa;
  text-decoration: underline;
}

.document span {
  width: 100%;
}

.document i {
  float: right;
  color: #555;
  margin: 5px 5px 0px 0px;
}


.documentation-frame {
  width: 100%;
  height: 100%;
  margin: 0;
  border-style: none;
}

.search-pane {
  font-family: 'droid_sans_monoregular';
  height: 100%;
  overflow-y: scroll;
}

.search-bar {
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-bottom-color: #AAA;
  padding: 10px;
  margin-bottom: 10px;
  width: 100%;
  display: flex;
}

.search-bar input {
  width: 100%;
}

.search-bar i {
  color: #B9C4D9;
}

.search-bar img {
  margin: 0px 5px 0px 0px;
}

.search-filter {
  width: 55px;
}

.document-subject {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline;
  margin-bottom: 5px;
  width: 100%;
}

/* Split-Pane Styles */
.split-pane {
  width: 100%;
  height: 100%;
}

.left-pane-content {
  float: left;
  width: 25%;
  height: 100%;
}

.right-pane-content {
  float: right;
  width: 75%;
  height: 100%;
}

.dragbar {
  float: right;
  height: 100%;
  width: 8px;
  padding-right: 9px;
  background: url(/img/handle-v.png) 3px 50% no-repeat;
  cursor: col-resize;
  border-left-style: solid;
  border-right-style: solid;
  border-bottom-style: none;
  border-top-style: none;
  border-width: 1px;
  border-color: #aaa;
}

#ghostbar {
  background-color: black;
  opacity: 0.5;
}

#ghostpaneLeft {
  opacity: 0;
}

#ghostpaneRight {
  opacity: 0;
}

/* Documenation Type */
.type-badge {
  width: 20px;
  height: 20px;
  line-height: 19px;
  text-align: center;
  border-radius: 3px;
  display: inline-block;
  background-color: #19647E;
  color: white;
  font-size: small; 
  border-style: solid;
  border-width: 1px;
  border-color: white;
}

.type-badge-class {
  background-color: #28AFB0;
}

.type-badge-exception {
  background-color: #AD2E24;
}

.type-badge-method {
  background-color: #EE964B;
}

.type-badge-function {
  background-color: #EE964B;
}

.type-badge-constructor {
  background-color: #C75146;
}

.type-badge-enum {
  background-color: #1F271B;
}

mark {
  background-color: #F4D35E;
  text-decoration: underline;
}

div.namespace-dropdown {
  display: inline-block;
}

.namespace-dropdown ul {
  margin-top: -35px;
  width: 500px;
}

.namespace-dropdown li:hover {
  background: #7698D6;
}

.result-group-count {
  border-radius: 10px;
  border-style: solid;
  border-color: #aaa;
  border-width: 1px;
  background: grey;
  width: 25px;
  float:right;
  text-align: center;
}

